Use CLI from Ktlint to avoid problems with `kotlin-compiler-embeddable`